1999-07-23  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/builtins.c:
	* fvwm/functions.c:
	* fvwm/functions.h:
	* fvwm/misc.h:
	* fvwm/session.c:
	* fvwm/session.h:
	* fvwm/fvwm2.1:
	* NEWS:
	Initially implemented new commands QuitSession, SaveSession,
	SaveQuitSession. They work for gnome-session, but not for xsm.
	Another way to implement them (which works for xsm) is sending
	SIGTERM and SIGUSR1 to a SM pid specified in $SESSION_MANAGER.

	* fvwm/session.c (set_sm_properties):
	XSM_BUGGY_DISCARD_COMMAND now extended by run-time xsm detection
	(currently using $SESSION_MANAGER_NAME environment, set by user).
	Fixed bug - added discardCommand declaration and initialization.
	(LoadGlobalState, LoadWindowStates, saveStateFile):
	Renamed SESSION_STATE to REAL_STATE_FILENAME. There are still
	problems with it specific to gnome-session.
	Some rearranging in the functions.

1999-07-20  Hippo

	* fvwm/builtins.c: Fixed color leak with FvwmTheme.
	* fvwm/fvwm.c: ignore errors with XFreeColors.
	* fvwm/modconf.c: Colorsets sent out with module config.
	* libs/Colorset.c: Fixed color leaks.
	* modules/FvwmIdent/*: New config option *FvwmIdentColorset

1999-07-16  Hippo

	* configure.in: New module FvwmTheme.
	* libs/Colorset.{h,c}: New lib functions for Colorset handling.
	* fvwm/add_window.c: added backing_store = NotUseful hint to the
	  client parent (not the border though that may be worth doing).
	* fvwm/builtins.c: removed DefaultBackground command.
	* fvwm/colors.c: moved AllocGradient and CreateGradientPixmap to libs/
	* fvwm/functions.{c,h}: removed DefaultBackground command.
	* fvwm/{fvwm.c, screen.h}: removed DefaultBackground structure.
	* fvwm/fvwm2.1: removed DefaultBackground command.
	* libs/Graphics.c: moved SetWindowBackground to libs/Colorset.c,
	  Added AllocGradient() & CreateGradientPixmap().
	* modules/*/Makefile.am added -lm to LADADD to satisfy linker.
	* modules/FvwmTheme: new module
	* fvwm/builtins.c: DefaultColors affects Colorset[0]