@@ -623,13 +623,15 @@ milliseconds.  "D" stands for double-click. The action "I" will cause
 an action to be performed on the button-press, if the function is
 invoked with prior knowledge of which window to act on.
 
-The special symbols $d, $w, $x, $y and $0 through $9 are available in the
-ComplexFunctions or Macros, or whatever you want to call them.  Within
-a macro, $w is expanded to the window-id (expressed in
+The special symbols $d, $w, $c, $r, $n, $x, $y and $0 through $9 are available
+in the ComplexFunctions or Macros, or whatever you want to call them.
+Within a macro, $w is expanded to the window-id (expressed in
 hex, i.e. 0x10023c) of the window for which the macro was called, $x and $y
 are expanded to the current coordinates of the viewport
-and $d is expanded to the current desk number. $0
-through $9 are the arguments to the macro, so if you call
+and $d is expanded to the current desk number.
+$c, $r, $n are expanded to the window resource class, resource name
+and window name respectively.
+$0 through $9 are the arguments to the macro, so if you call
 .EX
 Key F10 R A Function MailFunction \\
   xmh "-font fixed"
@@ -660,6 +662,13 @@ AddToFunc PrintFunction
 .EE
 Note that $$ is expanded to $.
 
+Another example: bind right mouse button within the window button number 6
+(this is a minimize button for the win95 theme) to iconify all windows of
+the same resource:
+.EX
+AddToFunc FuncIconifySameResource "I" All [$r] Iconify on
+Mouse 3 6 A FuncIconifySameResource
+.EE
 
 .IP "AddToMenu \fImenu-name\fP [ \fImenu-label\fP \fIaction\fP ]"
 Begins or adds to a menu definition.  Typically a menu definition looks
